<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint_layout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    android:padding="4dp"
    android:layout_marginBottom="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background2"
        android:maxHeight="80dp"
        android:minHeight="40dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/emoji_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="insert emoji"
            android:src="@drawable/smiley"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
            android:id="@+id/message_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/TypeMessage"
            android:hint="@string/TypeMessage"
            android:maxHeight="80dp"
            android:minHeight="50dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/cream"
            app:emojiconSize="28sp"
            app:layout_constraintEnd_toStartOf="@+id/attachButton"
            app:layout_constraintStart_toEndOf="@id/emoji_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/attachButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/ripple"
            android:visibility="gone"
            android:contentDescription="@string/attach_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_attach_file_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <ImageButton
        android:id="@+id/sendButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/ripple"
        android:contentDescription="@string/send_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/send" />

</androidx.constraintlayout.widget.ConstraintLayout>
