<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="?colorPrimary"
    tools:context=".Activities.OtpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="Phone Number Verification"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-medium"/>
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/About_phone"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-medium"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:elevation="50dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="100dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Enter_otp"
                android:textSize="18dp"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                />

            <com.broooapps.otpedittext2.OtpEditText
                android:id="@+id/editOtpNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:hint="******"
                android:cursorVisible="false"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="6"
                android:padding="8dp"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:oev_primary_color="@color/teal_200"
                app:oev_secondary_color="@color/light_gray" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/timer"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2:00"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toStartOf="@+id/verifyButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button

                    android:id="@+id/verifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="39dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/timer"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:visibility="gone"
                    android:id="@+id/resendButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="39dp"
                    android:text="Resend code"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/timer"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>